--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -334,6 +334,7 @@ a {
         transform: translateX(100%);
     }
 }
+
 /*Navbar search*/
 
 .search-box {
@@ -341,17 +342,21 @@ a {
     height: 35px;
     border-radius: 35px;
 }
-.search-box:hover{
+
+.search-box:hover {
     padding-left: 10px;
 }
+
 .search-box:hover > .search-txt {
     width: 240px;
     padding: 0 6px;
 }
+
 .search-box:hover > .search-btn {
     background: white;
 }
-.search-btn{
+
+.search-btn {
     float: right;
     width: 35px;
     height: 35px;
@@ -363,9 +368,11 @@ a {
     cursor: pointer;
     transition: .4s;
 }
+
 .search-btn path {
-    color:#BD00FF;
+    color: #BD00FF;
 }
+
 .search-txt {
     border: none;
     background: none;
@@ -377,9 +384,11 @@ a {
     line-height: 35px;
     width: 0;
 }
+
 .search-txt:focus {
     outline: none;
 }
+
 /*Search Page*/
 
 .search-page-container {
@@ -443,6 +452,12 @@ a {
     height: fit-content;
 }
 
+.cards__img > a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .anime-card-image {
     width: 100%;
     max-height: 90%;
@@ -451,6 +466,7 @@ a {
 
 .figcaption {
     height: fit-content;
+    bottom: 0;
 }
 
 .filter-header {
@@ -591,7 +607,6 @@ a {
 }
 
 
-
 /*Filters transition*/
 
 .filter-arrow-up {
@@ -627,7 +642,7 @@ a {
 /*Login page*/
 
 .login-page {
-    margin-top:52px;
+    margin-top: 52px;
     display: flex;
     width: 100%;
 }
@@ -637,7 +652,7 @@ a {
 }
 
 .login-aside {
-    float:right;
+    float: right;
     width: 100%;
 }
 
@@ -655,41 +670,51 @@ a {
     display: grid;
     grid-template: auto 1fr / auto 1fr;
 }
+
 .profile-aside {
     display: flex;
     flex-wrap: wrap;
     max-width: 350px;
 }
-.profile-picture{
+
+.profile-picture {
     margin-right: 20px;
 }
-.profile-picture img{
+
+.profile-picture img {
     max-width: 250px;
     border-radius: 20px;
 }
+
 .profile-name {
     font-size: 26px;
 }
+
 .profile-main {
     width: 100%;
 }
+
 .profile-tabs {
     margin-top: 15px;
     grid-column-start: span 2;
 }
+
 @media screen and (max-width: 800px) {
     .profile {
         grid-template: auto 1fr / auto;
     }
-    .profile-tabs{
+
+    .profile-tabs {
         grid-column-start: span 1;
     }
-    .profile-picture img{
+
+    .profile-picture img {
         max-width: 150px;
     }
 }
+
 /*Time bar*/
-.time-bar{
+.time-bar {
     overflow: hidden;
     position: relative;
     white-space: nowrap;
@@ -697,19 +722,22 @@ a {
     height: 8px;
     line-height: 8px;
 }
+
 .cuts {
     line-height: 5px;
     position: relative;
     white-space: nowrap;
 }
-.cut{
+
+.cut {
     background: #302D2D;
     height: 8px;
     position: absolute;
     width: 2px;
     line-height: 8px;
 }
-.time-part{
+
+.time-part {
     color: #302D2D;
     cursor: default;
     display: inline-block;
@@ -720,6 +748,7 @@ a {
     text-align: center;
     white-space: nowrap;
 }
+
 .time {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -730,11 +759,13 @@ a {
     text-align: center;
     width: 20%;
 }
+
 .checked-time {
     color: white;
 }
-.checked-time:before{
-    font-family: 'Marlett',sans-serif;
+
+.checked-time:before {
+    font-family: 'Marlett', sans-serif;
     text-transform: none;
     letter-spacing: normal;
     content: "✓";
@@ -742,8 +773,9 @@ a {
     font-size: 11px;
     margin-right: 4px;
 }
+
 /*home page*/
-.home-page{
+.home-page {
     position: absolute;
     margin: 52px auto 10px;
     left: 0;
