--- a/frontend/src/components/Slider/slider.css
+++ b/frontend/src/components/Slider/slider.css
@@ -1,5 +1,5 @@
 .slider-container {
-    max-width: 1185px;
+    max-width: 1250px;
     margin: auto auto 200px;
 }
 .slider-items::-webkit-scrollbar{
@@ -8,22 +8,24 @@
     width: 0;
 }
 .slider-items {
-    border: 3px solid #2ecc40;
     overflow-x: scroll;
     display: grid;
     grid-template: auto / repeat(20, auto);
-    grid-gap: 20px;
+    grid-gap: 16px;
     /*display: flex;*/
     /*flex-direction: row;*/
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
 .slider-items > * {
+    font-size: 14px;
 }
 .slider-item {
 
 }
 /*card*/
 .slider-item-image {
-    max-height: 320px;
+    border-radius: 5px;
+    max-height: 235px;
+    max-width: 165px;
 }
