--- a/frontend/src/components/Carousel/carousel.css
+++ b/frontend/src/components/Carousel/carousel.css
@@ -1,6 +1,5 @@
 .carousel-div {
-    width: 100vw;
-    height: calc(100vh - 52px);
+    width: 100%;
     margin: 0;
     position: relative;
     overflow: hidden;
@@ -44,6 +43,71 @@
     right: 20px;
     transform: translateY(-60%);
 }
-.carousel-image {
+.carousel-background {
     width:100%;
+    height: 120%;
+}
+.carousel-poster {
+    position: absolute;
+    left: 14%;
+    height: 100%;
+}
+.carousel-text {
+    font-family: "Verdana", fantasy;
+    text-align: center;
+    position: absolute;
+    right: 10%;
+    top: 35%;
+    color: #302D2D;
+    word-break: break-word;
+    width: 40%;
+    font-size: 24px;
+    font-weight: bold;
+}
+.carousel-text > p {
+    line-height: 1.8em;
+    font-family: inherit;
+    color: #070707;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 1300px) {
+    .carousel-text {
+        font-size: 20px;
+    }
+    .carousel-text > p {
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 1100px){
+    .carousel-text {
+        font-size: 16px;
+    }
+    .carousel-text > p {
+        font-size: 24px;
+    }
+}
+@media screen and (max-width: 900px){
+    .carousel-text > p {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 700px){
+    .carousel-text {
+        top: 25%;
+        right: 15%;
+        font-size: 14px;
+    }
+    .carousel-text > p {
+        font-size: 17px;
+    }
+}
+@media screen and (max-width: 600px){
+    .carousel-text {
+        font-size: 12px;
+    }
+    .carousel-text > p {
+        font-size: 14px;
+    }
 }
