--- a/frontend/src/components/Slider/slider.css
+++ b/frontend/src/components/Slider/slider.css
@@ -1,5 +1,5 @@
 .slider-container {
-    max-width: 1250px;
+    max-width: 100%;
     margin: auto auto 200px;
 }
 .slider-items::-webkit-scrollbar{
@@ -12,8 +12,6 @@
     display: grid;
     grid-template: auto / repeat(20, auto);
     grid-gap: 16px;
-    /*display: flex;*/
-    /*flex-direction: row;*/
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
