--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -403,7 +403,7 @@ a {
     grid-column-start: span 2;
     align-self: flex-start;
     width: 100%;
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
@@ -427,6 +427,9 @@ a {
 @media screen and (min-width: 600px) {
     .filter-menu {
         display: none;
+    }
+    .search-header {
+        font-size: 24px;
     }
 }
 
@@ -495,7 +498,18 @@ a {
 .filter-checkbox:checked {
     box-shadow: inset 0 0 0 20px #BD00FF;
 }
-
+.form-submit {
+    margin-top: 10px;
+    margin-left: 5px;
+    padding:5px 15px;
+    background: #BD00FF;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    font-size: 1.1em;
+    width: 150px;
+}
 
 @media screen and (max-width: 1285px) and (min-width: 975px) {
     .cards__img {
