--- a/frontend/src/components/Tabs/tabs.css
+++ b/frontend/src/components/Tabs/tabs.css
@@ -164,7 +164,7 @@ input[type=number]{
     overflow-y: auto;
     padding: 5px;
 }
-input[type=submit]{
+.edit-form > input[type=submit]{
     outline: none;
     cursor: pointer;
     color: #070707;
